# serializer version: 1
# name: test_query_all_questions[action_button-question__configuration14-None-question__format_validators14]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'ActionButtonQuestion',
            'id': 'QWN0aW9uQnV0dG9uUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[calculated_float-question__configuration13-None-question__format_validators13]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'CalculatedFloatQuestion',
            'calcExpression': '-1.0',
            'hintText': '',
            'id': 'Q2FsY3VsYXRlZEZsb2F0UXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[choice-question__configuration6-None-question__format_validators6]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'ChoiceQuestion',
            'hintText': '',
            'id': 'Q2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'options': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'slug': 'measure-evening',
                  }),
                }),
              ]),
              'totalCount': 1,
            }),
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[date-question__configuration3-None-question__format_validators3]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'DateQuestion',
            'hintText': '',
            'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[dynamic_choice-question__configuration10-MyDataSource-question__format_validators10]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'DynamicChoiceQuestion',
            'hintText': '',
            'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'options': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'label': '1',
                    'slug': '1',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': '5.5',
                    'slug': '5.5',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': 'sdkj',
                    'slug': 'sdkj',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': 'info',
                    'slug': 'value',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': 'something',
                    'slug': 'something',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': 'english description',
                    'slug': 'translated_value',
                  }),
                }),
              ]),
            }),
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[dynamic_multiple_choice-question__configuration11-MyDataSource-question__format_validators11]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'DynamicMultipleChoiceQuestion',
            'hintText': '',
            'id': 'RHluYW1pY011bHRpcGxlQ2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'options': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'label': '1',
                    'slug': '1',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': '5.5',
                    'slug': '5.5',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': 'sdkj',
                    'slug': 'sdkj',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': 'info',
                    'slug': 'value',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': 'something',
                    'slug': 'something',
                  }),
                }),
                dict({
                  'node': dict({
                    'label': 'english description',
                    'slug': 'translated_value',
                  }),
                }),
              ]),
            }),
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[files-question__configuration9-None-question__format_validators9]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'FilesQuestion',
            'hintText': '',
            'id': 'RmlsZXNRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[float-question__configuration1-None-question__format_validators1]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'FloatQuestion',
            'floatMaxValue': 1.0,
            'floatMinValue': 0.0,
            'hintText': '',
            'id': 'RmxvYXRRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'placeholder': '',
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[float-question__configuration2-None-question__format_validators2]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'FloatQuestion',
            'floatMaxValue': None,
            'floatMinValue': None,
            'hintText': '',
            'id': 'RmxvYXRRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'placeholder': '',
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[form-question__configuration8-None-question__format_validators8]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'FormQuestion',
            'id': 'Rm9ybVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'slug': 'environmental-ten',
            'subForm': dict({
              'slug': 'eight-traditional',
            }),
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[integer-question__configuration0-None-question__format_validators0]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'IntegerQuestion',
            'hintText': '',
            'id': 'SW50ZWdlclF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'integerMaxValue': 10,
            'integerMinValue': 0,
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'placeholder': '',
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[multiple_choice-question__configuration7-None-question__format_validators7]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'MultipleChoiceQuestion',
            'hintText': '',
            'id': 'TXVsdGlwbGVDaG9pY2VRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'options': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'slug': 'measure-evening',
                  }),
                }),
              ]),
              'totalCount': 1,
            }),
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[static-question__configuration12-None-question__format_validators12]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'StaticQuestion',
            'id': 'U3RhdGljUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': dict({
            }),
            'slug': 'environmental-ten',
            'staticContent': '''
              Station story first. Team suggest traditional boy above. Argue move appear catch toward help wind.
              Kid avoid player relationship to range whose. Draw free property consider.
            ''',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[text-question__configuration4-None-question__format_validators4]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'TextQuestion',
            'formatValidators': dict({
              'edges': list([
                dict({
                  'node': dict({
                    'errorMsg': 'Please enter a valid e-mail address',
                    'name': 'E-mail address',
                    'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
                    'slug': 'email',
                  }),
                }),
              ]),
            }),
            'hintText': '',
            'id': 'VGV4dFF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'maxLength': None,
            'meta': dict({
            }),
            'minLength': 10,
            'placeholder': '',
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_query_all_questions[textarea-question__configuration5-None-question__format_validators5]
  dict({
    'allQuestions': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'TextareaQuestion',
            'formatValidators': dict({
              'edges': list([
              ]),
            }),
            'hintText': '',
            'id': 'VGV4dGFyZWFRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'maxLength': 10,
            'meta': dict({
            }),
            'minLength': None,
            'placeholder': '',
            'slug': 'environmental-ten',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_save_action_button_question[action_button]
  dict({
    'saveActionButtonQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'ActionButtonQuestion',
        'action': 'SKIP',
        'color': 'PRIMARY',
        'id': 'QWN0aW9uQnV0dG9uUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
        'validateOnEnter': False,
      }),
    }),
  })
# ---
# name: test_save_choice_question[choice-False]
  dict({
    'saveChoiceQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'ChoiceQuestion',
        'defaultAnswer': None,
        'hintText': '',
        'id': 'Q2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'options': dict({
          'edges': list([
            dict({
              'node': dict({
                'label': 'Susan Wilson',
                'slug': 'eight-traditional',
              }),
            }),
          ]),
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_choice_question[choice-True]
  dict({
    'saveChoiceQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'ChoiceQuestion',
        'defaultAnswer': dict({
          'value': 'eight-traditional',
        }),
        'hintText': 'test',
        'id': 'Q2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'options': dict({
          'edges': list([
            dict({
              'node': dict({
                'label': 'Susan Wilson',
                'slug': 'eight-traditional',
              }),
            }),
          ]),
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_date_question[False-date-2022-01-31-2022-12-31-True]
  dict({
    'saveDateQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DateQuestion',
        'defaultAnswer': None,
        'hintText': '',
        'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'maxDate': '2022-12-31',
        'meta': dict({
        }),
        'minDate': '2022-01-31',
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_date_question[False-date-2022-01-31-None-True]
  dict({
    'saveDateQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DateQuestion',
        'defaultAnswer': None,
        'hintText': '',
        'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'maxDate': None,
        'meta': dict({
        }),
        'minDate': '2022-01-31',
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_date_question[False-date-None-2022-12-31-True]
  dict({
    'saveDateQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DateQuestion',
        'defaultAnswer': None,
        'hintText': '',
        'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'maxDate': '2022-12-31',
        'meta': dict({
        }),
        'minDate': None,
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_date_question[True-date-2022-01-31-2022-12-31-True]
  dict({
    'saveDateQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DateQuestion',
        'defaultAnswer': None,
        'hintText': '',
        'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'maxDate': '2022-12-31',
        'meta': dict({
        }),
        'minDate': '2022-01-31',
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_date_question[True-date-2022-01-31-None-True]
  dict({
    'saveDateQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DateQuestion',
        'defaultAnswer': None,
        'hintText': '',
        'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'maxDate': None,
        'meta': dict({
        }),
        'minDate': '2022-01-31',
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_date_question[True-date-None-2022-12-31-True]
  dict({
    'saveDateQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DateQuestion',
        'defaultAnswer': None,
        'hintText': '',
        'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'maxDate': '2022-12-31',
        'meta': dict({
        }),
        'minDate': None,
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_dynamic_choice_question[dynamic_choice-False]
  dict({
    'saveDynamicChoiceQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DynamicChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'options': dict({
          'edges': list([
            dict({
              'node': dict({
                'label': '1',
                'slug': '1',
              }),
            }),
            dict({
              'node': dict({
                'label': '5.5',
                'slug': '5.5',
              }),
            }),
            dict({
              'node': dict({
                'label': 'sdkj',
                'slug': 'sdkj',
              }),
            }),
            dict({
              'node': dict({
                'label': 'info',
                'slug': 'value',
              }),
            }),
            dict({
              'node': dict({
                'label': 'something',
                'slug': 'something',
              }),
            }),
            dict({
              'node': dict({
                'label': 'english description',
                'slug': 'translated_value',
              }),
            }),
          ]),
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_dynamic_choice_question[dynamic_choice-True]
  dict({
    'saveDynamicChoiceQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DynamicChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'options': dict({
          'edges': list([
            dict({
              'node': dict({
                'label': '1',
                'slug': '1',
              }),
            }),
            dict({
              'node': dict({
                'label': '5.5',
                'slug': '5.5',
              }),
            }),
            dict({
              'node': dict({
                'label': 'sdkj',
                'slug': 'sdkj',
              }),
            }),
            dict({
              'node': dict({
                'label': 'info',
                'slug': 'value',
              }),
            }),
            dict({
              'node': dict({
                'label': 'something',
                'slug': 'something',
              }),
            }),
            dict({
              'node': dict({
                'label': 'english description',
                'slug': 'translated_value',
              }),
            }),
          ]),
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_dynamic_choice_question[dynamic_multiple_choice-False]
  dict({
    'saveDynamicChoiceQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DynamicChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'options': dict({
          'edges': list([
            dict({
              'node': dict({
                'label': '1',
                'slug': '1',
              }),
            }),
            dict({
              'node': dict({
                'label': '5.5',
                'slug': '5.5',
              }),
            }),
            dict({
              'node': dict({
                'label': 'sdkj',
                'slug': 'sdkj',
              }),
            }),
            dict({
              'node': dict({
                'label': 'info',
                'slug': 'value',
              }),
            }),
            dict({
              'node': dict({
                'label': 'something',
                'slug': 'something',
              }),
            }),
            dict({
              'node': dict({
                'label': 'english description',
                'slug': 'translated_value',
              }),
            }),
          ]),
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_dynamic_choice_question[dynamic_multiple_choice-True]
  dict({
    'saveDynamicChoiceQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DynamicChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'options': dict({
          'edges': list([
            dict({
              'node': dict({
                'label': '1',
                'slug': '1',
              }),
            }),
            dict({
              'node': dict({
                'label': '5.5',
                'slug': '5.5',
              }),
            }),
            dict({
              'node': dict({
                'label': 'sdkj',
                'slug': 'sdkj',
              }),
            }),
            dict({
              'node': dict({
                'label': 'info',
                'slug': 'value',
              }),
            }),
            dict({
              'node': dict({
                'label': 'something',
                'slug': 'something',
              }),
            }),
            dict({
              'node': dict({
                'label': 'english description',
                'slug': 'translated_value',
              }),
            }),
          ]),
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_dynamic_multiple_choice_question[dynamic_multiple_choice-False]
  dict({
    'saveDynamicMultipleChoiceQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DynamicMultipleChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY011bHRpcGxlQ2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'options': dict({
          'edges': list([
            dict({
              'node': dict({
                'label': '1',
                'slug': '1',
              }),
            }),
            dict({
              'node': dict({
                'label': '5.5',
                'slug': '5.5',
              }),
            }),
            dict({
              'node': dict({
                'label': 'sdkj',
                'slug': 'sdkj',
              }),
            }),
            dict({
              'node': dict({
                'label': 'info',
                'slug': 'value',
              }),
            }),
            dict({
              'node': dict({
                'label': 'something',
                'slug': 'something',
              }),
            }),
            dict({
              'node': dict({
                'label': 'english description',
                'slug': 'translated_value',
              }),
            }),
          ]),
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_dynamic_multiple_choice_question[dynamic_multiple_choice-True]
  dict({
    'saveDynamicMultipleChoiceQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DynamicMultipleChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY011bHRpcGxlQ2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'options': dict({
          'edges': list([
            dict({
              'node': dict({
                'label': '1',
                'slug': '1',
              }),
            }),
            dict({
              'node': dict({
                'label': '5.5',
                'slug': '5.5',
              }),
            }),
            dict({
              'node': dict({
                'label': 'sdkj',
                'slug': 'sdkj',
              }),
            }),
            dict({
              'node': dict({
                'label': 'info',
                'slug': 'value',
              }),
            }),
            dict({
              'node': dict({
                'label': 'something',
                'slug': 'something',
              }),
            }),
            dict({
              'node': dict({
                'label': 'english description',
                'slug': 'translated_value',
              }),
            }),
          ]),
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_float_question[float-question__configuration0-0.3-True]
  dict({
    'saveFloatQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'FloatQuestion',
        'defaultAnswer': dict({
          'value': 0.3,
        }),
        'hintText': 'test',
        'id': 'RmxvYXRRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'maxValue': 10.0,
        'meta': dict({
        }),
        'minValue': 0.0,
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_form_question[form]
  dict({
    'saveFormQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'FormQuestion',
        'id': 'Rm9ybVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
        'subForm': dict({
          'slug': 'eight-traditional',
        }),
      }),
    }),
  })
# ---
# name: test_save_integer_question[integer-question__configuration0-23-True]
  dict({
    'saveIntegerQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'IntegerQuestion',
        'defaultAnswer': dict({
          'value': 23,
        }),
        'hintText': 'test',
        'id': 'SW50ZWdlclF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'maxValue': 10,
        'meta': dict({
        }),
        'minValue': 0,
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_multiple_choice_question[multiple_choice]
  dict({
    'saveMultipleChoiceQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'MultipleChoiceQuestion',
        'defaultAnswer': dict({
          'value': list([
            'maybe-stock-capital',
            'court-ask',
          ]),
        }),
        'hintText': 'test',
        'id': 'TXVsdGlwbGVDaG9pY2VRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'options': dict({
          'edges': list([
            dict({
              'node': dict({
                'label': 'William Ramos',
                'slug': 'maybe-stock-capital',
              }),
            }),
            dict({
              'node': dict({
                'label': 'Scott Powell',
                'slug': 'court-ask',
              }),
            }),
          ]),
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_question[true-True-SaveCalculatedFloatQuestion]
  dict({
    'saveCalculatedFloatQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'CalculatedFloatQuestion',
        'id': 'Q2FsY3VsYXRlZEZsb2F0UXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_question[true-True-SaveDateQuestion]
  dict({
    'saveDateQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'DateQuestion',
        'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_question[true-True-SaveFilesQuestion]
  dict({
    'saveFilesQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'FilesQuestion',
        'id': 'RmlsZXNRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_question[true-True-SaveFloatQuestion]
  dict({
    'saveFloatQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'FloatQuestion',
        'id': 'RmxvYXRRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_question[true-True-SaveIntegerQuestion]
  dict({
    'saveIntegerQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'IntegerQuestion',
        'id': 'SW50ZWdlclF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_question[true-True-SaveTextQuestion]
  dict({
    'saveTextQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'TextQuestion',
        'id': 'VGV4dFF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_question[true-True-SaveTextareaQuestion]
  dict({
    'saveTextareaQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'TextareaQuestion',
        'id': 'VGV4dGFyZWFRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
# name: test_save_static_question[static]
  dict({
    'saveStaticQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'StaticQuestion',
        'id': 'U3RhdGljUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'slug': 'environmental-ten',
        'staticContent': '''
          Station story first. Team suggest traditional boy above. Argue move appear catch toward help wind.
          Kid avoid player relationship to range whose. Draw free property consider.
        ''',
      }),
    }),
  })
# ---
# name: test_save_table_question[table]
  dict({
    'saveTableQuestion': dict({
      'clientMutationId': 'testid',
      'question': dict({
        '__typename': 'TableQuestion',
        'hintText': 'test',
        'id': 'VGFibGVRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'meta': dict({
        }),
        'rowForm': dict({
          'slug': 'eight-traditional',
        }),
        'slug': 'environmental-ten',
      }),
    }),
  })
# ---
